fix removal of project list hover state on mobile

--- a/app/less/tablet/modules/project-list.less
+++ b/app/less/tablet/modules/project-list.less
@@ -23,10 +23,7 @@
 
         &:hover {
             .project-hero {
-                left: -5%;
-            }
-            .view-project {
-                left: 100%;
+                .scale(1);
             }
         }
 
